--- a/toolbox/debian/Containerfile
+++ b/toolbox/debian/Containerfile
@@ -25,12 +25,14 @@ COPY toolbox-flatpak-xdg-utils.sh /etc/profile.d
 
 # Install extra packages as well as libnss-myhostname
 COPY extra-packages /
+COPY extra-dev-packages /
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get -y install \
         libnss-myhostname \
         $(cat extra-packages | xargs) && \
+        $(cat extra-dev-packages | xargs) && \
     rm -rd /var/lib/apt/lists/*
-RUN rm /extra-packages
+RUN rm /extra-packages /extra-dev-packages
 
 # Enable password less sudo
 RUN sed -i -e 's/ ALL$/ NOPASSWD:ALL/' /etc/sudoers
