--- a/toolbox/debian/Containerfile
+++ b/toolbox/debian/Containerfile
@@ -29,8 +29,7 @@ COPY extra-dev-packages /
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get -y install \
         libnss-myhostname \
-        $(cat extra-packages | xargs) && \
-        $(cat extra-dev-packages | xargs) && \
+        $(cat extra*packages | xargs) && \
     rm -rd /var/lib/apt/lists/*
 RUN rm /extra-packages /extra-dev-packages
 
